<resources>
    <string name="app_name">Job Flex</string>
    <string name="job_flex"><u>JobFlex</u></string>

    <string name="label_create_account">Register</string>
    <string name="label_login">Log in</string>
    <string name="label_logout">Logout</string>
    <string name="label_signup">Sign up</string>
    <string name="label_home">Home</string>
    <string name="label_search">Search</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="txt_create_account">Don\'t have an account yet? <u>Register here</u>.</string>
    <string name="txt_terms">By signing up, you agree to <u>Terms of Service</u> and <u>Privacy Policy</u>.</string>
    <string name="txt_profile_user">Profile User</string>
    <string name="prompt_search">Search the Job</string>
    <string name="tv_job_offer">Job Offer for You</string>
    <string name="image_job_desc">Icon of Job</string>
    <string name="tv_apply_now">Apply Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_sort_by">Sort by</string>
    <string name="tv_filter">Filter</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="txt_show_more">Show more…</string>
    <string name="txt_show_less">Show less…</string>
    <string name="job_application_status">Job Application Status</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_cv">Upload CV</string>
    <string name="your_name">Your Name</string>
    <string name="your_cv">Your CV</string>
    <string name="pdf">.pdf</string>
    <string name="upload">Upload</string>

    <string name="name_required_error">Name is required to sign up.</string>
    <string name="phone_required_error">Phone number is required to sign up.</string>
    <string name="email_required_error">Email address is required.</string>
    <string name="password_required_error">Password is required.</string>
    <string name="malformed_phone_error">This phone number is badly formatted.</string>
    <string name="malformed_email_error">This email address is badly formatted.</string>
    <string name="short_password_error">Password should be at least 6 characters.</string>
    <string name="message_logout">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="template_date">%1$s - %2$s</string>
    <string name="txt_description">Description</string>
    <string name="txt_requirement">Requirement</string>
    <string name="txt_date">Date</string>
    <string name="txt_detail">Job Detail</string>
    <string name="txt_profile">Your Profile</string>
</resources>