<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.exwara.jobflex.ui.account.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.login.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/label_login"
                android:textSize="36sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text|textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/loginError"
                hideIfEmpty="@{loginViewModel.errorString}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:maxLines="3"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:enabled="@{loginViewModel.buttonEnabled}"
                android:onClick="@{()-> loginViewModel.login()}"
                android:text="@string/label_login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/txt_create_account"
                android:textColor="@color/black_200"
                android:textSize="12sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            hideIfFalse="@{loginViewModel.progress}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/progress" />

    </RelativeLayout>

</layout>