<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/letter_title"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/circle"
            android:gravity="center"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="R" />

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="@color/black_200"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/letter_title"
            app:layout_constraintTop_toTopOf="@id/letter_title"
            tools:text="job title" />

        <TextView
            android:id="@+id/tv_item_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/black_200"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_title"
            app:layout_constraintStart_toStartOf="@+id/tv_item_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
            tools:text="city" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_border"
            android:minHeight="32dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/tv_apply_now"
            app:layout_constraintBottom_toBottomOf="@id/letter_title"
            app:layout_constraintStart_toEndOf="@id/letter_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/letter_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_description"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                tools:text="Completely deliver an expanded array of communities and equity invested processes. Efficiently deploy market positioning potentialities and B2B supply chains. Dramatically strategize highly efficient web services without resource maximizing web services. Synergistically deliver front-end expertise rather than virtual."/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_requirement"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_requirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                tools:text="Efficiently drive holistic internal or organic sources through seamless innovation."/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_date"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                tools:text="21 May - 23 May"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>